# le_agent

./: README.md  auth-flow.md  backend_arch_for_fe.md
backend/: README.md  main.py  pyproject.toml
backend/alembic/versions/: 1ff1c1f7363b_add_policy_column.py  9f614c26f4fc_initial.py
backend/api/: agents.py  auth.py
backend/db/: crud.py  models.py
backend/models/: agent.py  policy.py  trade.py
backend/runners/: manager.py
backend/utils/: brain.py  ens.py  keys.py  signing.py  uniswap.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/agents/: page.tsx
frontend/app/agents/[id]/: page.tsx
frontend/app/api/polymarket-market/: route.ts
frontend/app/api/polymarket-search/: route.ts
frontend/components/: AddAgentButton.tsx  AgentAllowances.tsx  AgentTrades.tsx  AllowanceModal.tsx  AppLayout.tsx  CreateAgentModal.tsx  PolicyDisplay.tsx  Sidebar.tsx
frontend/lib/: api.ts  contracts.ts  types.ts
leagent/: package-lock.json  package.json
leagent/app/: layout.tsx  page.tsx
leagent/components/: Sidebar.tsx
leagent/lib/: mockAgents.ts
