[project]
name = "backend"
version = "0.1.0"
description = "le_agent backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.4",
  "asyncpg>=0.31.0",
  "eth-account>=0.13.7",
  "fastapi>=0.135.3",
  "python-jose[cryptography]>=3.5.0",
  "sqlalchemy>=2.0.49",
  "uvicorn>=0.43.0",
]
